Footer Alignment fix

--- a/client/src/app/components/shared/footer/footer.component.css
+++ b/client/src/app/components/shared/footer/footer.component.css
@@ -3,7 +3,7 @@
     padding: 50px 0 30px 0;
     color: #f0f9ff;
     background-color: #1e2833;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
